app/will-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: will-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: will-app
  template:
    metadata:
      labels:
        app: will-app
    spec:
      containers:
        - name: will-app
          image: "paulbouwer/hello-kubernetes:1.10"
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 8080
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: will-app
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: tcp
  selector:
    app: will-app
